--- a/python_algorithm/pyPractice/p151to160.ipynb
+++ b/python_algorithm/pyPractice/p151to160.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "766542c7",
+   "id": "acf373ad",
    "metadata": {},
    "source": [
     "### 151"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "585c51d1",
+   "id": "5713f597",
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94e4709e",
+   "id": "b8438201",
    "metadata": {},
    "source": [
     "### 152"
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5bf3f8a6",
+   "id": "b5c5b51e",
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a77f952e",
+   "id": "598e09c2",
    "metadata": {},
    "source": [
     "### 153"
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "65fc801b",
+   "id": "345407cb",
    "metadata": {},
    "outputs": [
     {
@@ -93,9 +93,111 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "935311d7",
+   "metadata": {},
+   "source": [
+    "### 154"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "245178dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A\n",
+      "D\n"
+     ]
+    }
+   ],
+   "source": [
+    "lists = [\"A\", \"b\", \"c\", \"D\"]\n",
+    "\n",
+    "for var in lists : \n",
+    "    if var.isupper() :\n",
+    "        print (var)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d9ccf36",
+   "metadata": {},
+   "source": [
+    "### 155"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "39ccc71c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "study\n",
+      "python\n",
+      "language\n"
+     ]
+    }
+   ],
+   "source": [
+    "lists = [\"I\", \"study\", \"python\", \"language\", \"!\"]\n",
+    "\n",
+    "for var in lists:\n",
+    "    if len(var) >= 3 :\n",
+    "        print (var)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c7d49966",
+   "metadata": {},
+   "source": [
+    "### 156"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "34564368",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b\n",
+      "c\n"
+     ]
+    }
+   ],
+   "source": [
+    "lists = [\"A\", \"b\", \"c\", \"D\"]\n",
+    "\n",
+    "for var in lists:\n",
+    "    if var.islower() :\n",
+    "        print(var)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "00adb466",
+   "metadata": {},
+   "source": [
+    "### 157"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68d637e5",
+   "id": "7cc940f5",
    "metadata": {},
    "outputs": [],
    "source": []
