--- a/python_algorithm/pyPractice/p151to160.ipynb
+++ b/python_algorithm/pyPractice/p151to160.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "acf373ad",
+   "id": "0af68322",
    "metadata": {},
    "source": [
     "### 151"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5713f597",
+   "id": "2287c3a3",
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8438201",
+   "id": "42d5655e",
    "metadata": {},
    "source": [
     "### 152"
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b5c5b51e",
+   "id": "b230fd9d",
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "598e09c2",
+   "id": "76b3487c",
    "metadata": {},
    "source": [
     "### 153"
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "345407cb",
+   "id": "2d9545bd",
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "935311d7",
+   "id": "4f73981a",
    "metadata": {},
    "source": [
     "### 154"
@@ -103,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "245178dc",
+   "id": "d2767e1b",
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d9ccf36",
+   "id": "65eecfa4",
    "metadata": {},
    "source": [
     "### 155"
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "39ccc71c",
+   "id": "6f017790",
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7d49966",
+   "id": "19373f09",
    "metadata": {},
    "source": [
     "### 156"
@@ -166,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "34564368",
+   "id": "32b7c9f2",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00adb466",
+   "id": "3a0608f5",
    "metadata": {},
    "source": [
     "### 157"
@@ -196,8 +196,153 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "id": "9240d645",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dog\n",
+      "Cat\n",
+      "Parrot\n"
+     ]
+    }
+   ],
+   "source": [
+    "lists = ['dog', 'cat', 'parrot']\n",
+    "\n",
+    "for var in lists:\n",
+    "    print(var[0].upper() + var[1:])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2282f3cf",
+   "metadata": {},
+   "source": [
+    "1) 인덱싱으로 첫번째 문자를 가져온다.\n",
+    "<br>2) upper() 함수로 대문자로 변경한다.\n",
+    "<br>3) 변경한 대문자와 나머지 문자를 이어붙인다.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e89f7cbe",
+   "metadata": {},
+   "source": [
+    "### 158"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "79ab5274",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n",
+      "ex01\n",
+      "intro\n"
+     ]
+    }
+   ],
+   "source": [
+    "lists = ['hello.py', 'ex01.py', 'intro.hwp']\n",
+    "for var in lists :\n",
+    "    split = var.split(\".\")\n",
+    "    print(split[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0dbed916",
+   "metadata": {},
+   "source": [
+    "split() 메서드를 사용해서 마침표를 구분자 (\".\")로 문자열을 분할합니다. 그리고 0번 인덱스에 들어있는 파일 이름만 화면에 출력합니다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b20719c",
+   "metadata": {},
+   "source": [
+    "### 159"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "3c5aa2fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "intra.h\n",
+      "define.h\n"
+     ]
+    }
+   ],
+   "source": [
+    "lists = ['intra.h', 'intra.c', 'define.h', 'run.py']\n",
+    "\n",
+    "for var in lists:\n",
+    "    split = var.split(\".\")\n",
+    "    if split[1] == 'h' :\n",
+    "        print(var)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc9a122a",
+   "metadata": {},
+   "source": [
+    "split() 메서드로 문자열을 분할하고 확장자가 \"h\"인지 분기문으로 비교합니다. 확장자가 \"h\"라면 파일 이름을 출력합니다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "812871bb",
+   "metadata": {},
+   "source": [
+    "### 160"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "eb601382",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "intra.h\n",
+      "intra.c\n",
+      "define.h\n"
+     ]
+    }
+   ],
+   "source": [
+    "lists = ['intra.h', 'intra.c', 'define.h', 'run.py']\n",
+    "\n",
+    "for var in lists:\n",
+    "    split = var.split(\".\")\n",
+    "    if split[1] == 'h' or split[1] == 'c' :\n",
+    "        print(var)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "7cc940f5",
+   "id": "a3741f2d",
    "metadata": {},
    "outputs": [],
    "source": []
