--- a/python_algorithm/pyPractice/p161to170.ipynb
+++ b/python_algorithm/pyPractice/p161to170.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fb98f0bd",
+   "id": "a120e3d5",
    "metadata": {},
    "source": [
     "### 161\n"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9fc00506",
+   "id": "994406b7",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65dd264e",
+   "id": "48ab0ad4",
    "metadata": {},
    "source": [
     "### 162"
@@ -137,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "71110599",
+   "id": "ff030a95",
    "metadata": {},
    "outputs": [
     {
@@ -165,12 +165,58 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a8feaf90",
+   "metadata": {},
+   "source": [
+    "### 163"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "2bd11f1a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "6\n",
+      "9\n",
+      "12\n",
+      "15\n",
+      "18\n",
+      "21\n",
+      "24\n",
+      "27\n",
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(3, 31, 3) :\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "676573ef",
+   "metadata": {},
+   "source": [
+    "### 164"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac94a8c4",
+   "id": "53df06f3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for i in range ()"
+   ]
   }
  ],
  "metadata": {
