--- a/python_algorithm/pyPractice/p161to170.ipynb
+++ b/python_algorithm/pyPractice/p161to170.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a120e3d5",
+   "id": "e9e728b6",
    "metadata": {},
    "source": [
     "### 161\n"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "994406b7",
+   "id": "e62133f8",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48ab0ad4",
+   "id": "d0be836f",
    "metadata": {},
    "source": [
     "### 162"
@@ -137,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ff030a95",
+   "id": "c74b29be",
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8feaf90",
+   "id": "2c9b4dac",
    "metadata": {},
    "source": [
     "### 163"
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "2bd11f1a",
+   "id": "8adf6574",
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "676573ef",
+   "id": "b195a045",
    "metadata": {},
    "source": [
     "### 164"
@@ -210,13 +210,317 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "id": "66ca842d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0\n",
+      "0.1\n",
+      "0.2\n",
+      "0.3\n",
+      "0.4\n",
+      "0.5\n",
+      "0.6\n",
+      "0.7\n",
+      "0.8\n",
+      "0.9\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range (10) :\n",
+    "    print(i / 10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d16f1d75",
+   "metadata": {},
+   "source": [
+    "### 165"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "8cb3a3ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "99\n",
+      "98\n",
+      "97\n",
+      "96\n",
+      "95\n",
+      "94\n",
+      "93\n",
+      "92\n",
+      "91\n",
+      "90\n",
+      "89\n",
+      "88\n",
+      "87\n",
+      "86\n",
+      "85\n",
+      "84\n",
+      "83\n",
+      "82\n",
+      "81\n",
+      "80\n",
+      "79\n",
+      "78\n",
+      "77\n",
+      "76\n",
+      "75\n",
+      "74\n",
+      "73\n",
+      "72\n",
+      "71\n",
+      "70\n",
+      "69\n",
+      "68\n",
+      "67\n",
+      "66\n",
+      "65\n",
+      "64\n",
+      "63\n",
+      "62\n",
+      "61\n",
+      "60\n",
+      "59\n",
+      "58\n",
+      "57\n",
+      "56\n",
+      "55\n",
+      "54\n",
+      "53\n",
+      "52\n",
+      "51\n",
+      "50\n",
+      "49\n",
+      "48\n",
+      "47\n",
+      "46\n",
+      "45\n",
+      "44\n",
+      "43\n",
+      "42\n",
+      "41\n",
+      "40\n",
+      "39\n",
+      "38\n",
+      "37\n",
+      "36\n",
+      "35\n",
+      "34\n",
+      "33\n",
+      "32\n",
+      "31\n",
+      "30\n",
+      "29\n",
+      "28\n",
+      "27\n",
+      "26\n",
+      "25\n",
+      "24\n",
+      "23\n",
+      "22\n",
+      "21\n",
+      "20\n",
+      "19\n",
+      "18\n",
+      "17\n",
+      "16\n",
+      "15\n",
+      "14\n",
+      "13\n",
+      "12\n",
+      "11\n",
+      "10\n",
+      "9\n",
+      "8\n",
+      "7\n",
+      "6\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      "\n",
+      "99\n",
+      "98\n",
+      "97\n",
+      "96\n",
+      "95\n",
+      "94\n",
+      "93\n",
+      "92\n",
+      "91\n",
+      "90\n",
+      "89\n",
+      "88\n",
+      "87\n",
+      "86\n",
+      "85\n",
+      "84\n",
+      "83\n",
+      "82\n",
+      "81\n",
+      "80\n",
+      "79\n",
+      "78\n",
+      "77\n",
+      "76\n",
+      "75\n",
+      "74\n",
+      "73\n",
+      "72\n",
+      "71\n",
+      "70\n",
+      "69\n",
+      "68\n",
+      "67\n",
+      "66\n",
+      "65\n",
+      "64\n",
+      "63\n",
+      "62\n",
+      "61\n",
+      "60\n",
+      "59\n",
+      "58\n",
+      "57\n",
+      "56\n",
+      "55\n",
+      "54\n",
+      "53\n",
+      "52\n",
+      "51\n",
+      "50\n",
+      "49\n",
+      "48\n",
+      "47\n",
+      "46\n",
+      "45\n",
+      "44\n",
+      "43\n",
+      "42\n",
+      "41\n",
+      "40\n",
+      "39\n",
+      "38\n",
+      "37\n",
+      "36\n",
+      "35\n",
+      "34\n",
+      "33\n",
+      "32\n",
+      "31\n",
+      "30\n",
+      "29\n",
+      "28\n",
+      "27\n",
+      "26\n",
+      "25\n",
+      "24\n",
+      "23\n",
+      "22\n",
+      "21\n",
+      "20\n",
+      "19\n",
+      "18\n",
+      "17\n",
+      "16\n",
+      "15\n",
+      "14\n",
+      "13\n",
+      "12\n",
+      "11\n",
+      "10\n",
+      "9\n",
+      "8\n",
+      "7\n",
+      "6\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(99, 0, -1) :\n",
+    "    print(i)\n",
+    "    \n",
+    "print(\"\")\n",
+    "    \n",
+    "for i in range(100) :\n",
+    "    print (99 - i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a541e42a",
+   "metadata": {},
+   "source": [
+    "### 166"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "8860c509",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 x 1 = 3\n",
+      "3 x 2 = 6\n",
+      "3 x 3 = 9\n",
+      "3 x 4 = 12\n",
+      "3 x 5 = 15\n",
+      "3 x 6 = 18\n",
+      "3 x 7 = 21\n",
+      "3 x 8 = 24\n",
+      "3 x 9 = 27\n",
+      "3 x 1  =  3\n",
+      "3 x 2  =  6\n",
+      "3 x 3  =  9\n",
+      "3 x 4  =  12\n",
+      "3 x 5  =  15\n",
+      "3 x 6  =  18\n",
+      "3 x 7  =  21\n",
+      "3 x 8  =  24\n",
+      "3 x 9  =  27\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1, 10, 1) :\n",
+    "    print(\"3 x\", i, \"=\", 3*i)\n",
+    "\n",
+    "for i in range(1, 10) :\n",
+    "    print(3, \"x\", i, \" = \", 3 * i)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "53df06f3",
+   "id": "ee8ea0f5",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "for i in range ()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
