--- a/python_algorithm/pyPractice/p161to170.ipynb
+++ b/python_algorithm/pyPractice/p161to170.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e9e728b6",
+   "id": "3af9dd52",
    "metadata": {},
    "source": [
     "### 161\n"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e62133f8",
+   "id": "dfd097a5",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0be836f",
+   "id": "cad3ab63",
    "metadata": {},
    "source": [
     "### 162"
@@ -137,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c74b29be",
+   "id": "7712866c",
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c9b4dac",
+   "id": "c1a12520",
    "metadata": {},
    "source": [
     "### 163"
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "8adf6574",
+   "id": "4fea694e",
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b195a045",
+   "id": "a59f186d",
    "metadata": {},
    "source": [
     "### 164"
@@ -211,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "66ca842d",
+   "id": "754c2891",
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d16f1d75",
+   "id": "4c8fc089",
    "metadata": {},
    "source": [
     "### 165"
@@ -247,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "8cb3a3ef",
+   "id": "df10af62",
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a541e42a",
+   "id": "dac41863",
    "metadata": {},
    "source": [
     "### 166"
@@ -478,7 +478,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "8860c509",
+   "id": "074e9c37",
    "metadata": {},
    "outputs": [
     {
@@ -515,9 +515,69 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4db4ad91",
+   "metadata": {},
+   "source": [
+    "### 167"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "5e862631",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 x 1  =  3\n",
+      "3 x 3  =  9\n",
+      "3 x 5  =  15\n",
+      "3 x 7  =  21\n",
+      "3 x 9  =  27\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range (1, 10, 2) :\n",
+    "    print(3, \"x\", i, \" = \", 3 * i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5499676",
+   "metadata": {},
+   "source": [
+    "### 168"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "853e8836",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "55\n"
+     ]
+    }
+   ],
+   "source": [
+    "sum = 0\n",
+    "for i in range (1, 11):\n",
+    "    sum += i\n",
+    "print(sum)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee8ea0f5",
+   "id": "b8759f81",
    "metadata": {},
    "outputs": [],
    "source": []
