--- a/python_algorithm/pyPractice/p161to170.ipynb
+++ b/python_algorithm/pyPractice/p161to170.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3af9dd52",
+   "id": "133d0a45",
    "metadata": {},
    "source": [
     "### 161\n"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "dfd097a5",
+   "id": "f40c0769",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cad3ab63",
+   "id": "ee4cdc6e",
    "metadata": {},
    "source": [
     "### 162"
@@ -137,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "7712866c",
+   "id": "19157d92",
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1a12520",
+   "id": "8da08d05",
    "metadata": {},
    "source": [
     "### 163"
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "4fea694e",
+   "id": "64be4b33",
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a59f186d",
+   "id": "c51e4df5",
    "metadata": {},
    "source": [
     "### 164"
@@ -211,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "754c2891",
+   "id": "97f15d35",
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c8fc089",
+   "id": "92b7b64f",
    "metadata": {},
    "source": [
     "### 165"
@@ -247,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "df10af62",
+   "id": "f621e032",
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dac41863",
+   "id": "6a83aedc",
    "metadata": {},
    "source": [
     "### 166"
@@ -478,7 +478,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "074e9c37",
+   "id": "4ccbd6d9",
    "metadata": {},
    "outputs": [
     {
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4db4ad91",
+   "id": "4fefde44",
    "metadata": {},
    "source": [
     "### 167"
@@ -525,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "5e862631",
+   "id": "b26cfff1",
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5499676",
+   "id": "d49b5849",
    "metadata": {},
    "source": [
     "### 168"
@@ -556,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "853e8836",
+   "id": "7fcb852d",
    "metadata": {},
    "outputs": [
     {
@@ -575,9 +575,60 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "af3a5327",
+   "metadata": {},
+   "source": [
+    "### 169"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "99520d50",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25\n"
+     ]
+    }
+   ],
+   "source": [
+    "sum = 0\n",
+    "for i in range (1, 11) :\n",
+    "    if i%2 == 1 :\n",
+    "        sum += i\n",
+    "print(sum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "306ab35d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3628800\n"
+     ]
+    }
+   ],
+   "source": [
+    "times = 1\n",
+    "for i in range (1, 11) :\n",
+    "    times *= i\n",
+    "print(times)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8759f81",
+   "id": "065d64f1",
    "metadata": {},
    "outputs": [],
    "source": []
