--- a/python_algorithm/pyPractice/p171to180.ipynb
+++ b/python_algorithm/pyPractice/p171to180.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "51e40a88",
+   "id": "606e8ffb",
    "metadata": {},
    "source": [
     "### 171"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4998a237",
+   "id": "03396b8e",
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04cb580b",
+   "id": "c9e00f63",
    "metadata": {},
    "source": [
     "### 172"
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "eee280a8",
+   "id": "8471f787",
    "metadata": {},
    "outputs": [
     {
@@ -85,9 +85,86 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c75bbf1a",
+   "metadata": {},
+   "source": [
+    "### 173"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "f0d76cbe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 32100\n",
+      "2 32150\n",
+      "1 32000\n",
+      "0 32500\n",
+      "3 32100\n",
+      "2 32150\n",
+      "1 32000\n",
+      "0 32500\n"
+     ]
+    }
+   ],
+   "source": [
+    "price_list = [32100, 32150, 32000, 32500]\n",
+    "\n",
+    "##for i, data in enumerate(price_list):\n",
+    "##    print(i[:-1], data)\n",
+    "\n",
+    "for i in range(len(price_list)):\n",
+    "    print(3 - i, price_list[i])\n",
+    "\n",
+    "for i in range(len(price_list)):\n",
+    "    print((len(price_list) - 1) - i, price_list[i])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "23621db4",
+   "metadata": {},
+   "source": [
+    "### 174"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "8b37185e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100 32150\n",
+      "110 32000\n",
+      "120 32500\n"
+     ]
+    }
+   ],
+   "source": [
+    "price_list = [32100, 32150, 32000, 32500]\n",
+    "\n",
+    "#for i in range(len(price_list)) :\n",
+    "#    print((10*i + 100), price_list[i+1])\n",
+    "# The result showed the same but I got index error from this coding.\n",
+    "\n",
+    "for i in range(1, 4) :\n",
+    "    print(90 + 10* i, price_list[i])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa44ba00",
+   "id": "fe0ecb5b",
    "metadata": {},
    "outputs": [],
    "source": []
