--- a/python_algorithm/pyPractice/p171to180.ipynb
+++ b/python_algorithm/pyPractice/p171to180.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "606e8ffb",
+   "id": "16187b51",
    "metadata": {},
    "source": [
     "### 171"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "03396b8e",
+   "id": "698e7b6f",
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9e00f63",
+   "id": "9f7b72d7",
    "metadata": {},
    "source": [
     "### 172"
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "8471f787",
+   "id": "92a0fed5",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c75bbf1a",
+   "id": "db4ecced",
    "metadata": {},
    "source": [
     "### 173"
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "f0d76cbe",
+   "id": "a5db7377",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23621db4",
+   "id": "e00870ad",
    "metadata": {},
    "source": [
     "### 174"
@@ -137,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "8b37185e",
+   "id": "f7ae7dae",
    "metadata": {},
    "outputs": [
     {
@@ -162,9 +162,71 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ac23e073",
+   "metadata": {},
+   "source": [
+    "### 175"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "0fe595b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "가 나\n",
+      "나 다\n",
+      "다 라\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_list = [\"가\", \"나\", \"다\", \"라\"]\n",
+    "\n",
+    "for i in range(0,3) :\n",
+    "    print(my_list[i], my_list[i+1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb145b4a",
+   "metadata": {},
+   "source": [
+    "### 176"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "67e17f16",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "가 나 다\n",
+      "나 다 라\n",
+      "다 라 마\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_list = [\"가\", \"나\", \"다\", \"라\", \"마\"]\n",
+    "\n",
+    "for i in range (0, 3) :\n",
+    "    print(my_list[i], my_list[i+1], my_list[i+2])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe0ecb5b",
+   "id": "ec5e77ff",
    "metadata": {},
    "outputs": [],
    "source": []
