added: problem from 177 to 178.

--- a/python_algorithm/pyPractice/p171to180.ipynb
+++ b/python_algorithm/pyPractice/p171to180.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "16187b51",
+   "id": "ef98c150",
    "metadata": {},
    "source": [
     "### 171"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "698e7b6f",
+   "id": "de083b0b",
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f7b72d7",
+   "id": "0d72885e",
    "metadata": {},
    "source": [
     "### 172"
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "92a0fed5",
+   "id": "e44130ec",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db4ecced",
+   "id": "c5629a4e",
    "metadata": {},
    "source": [
     "### 173"
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a5db7377",
+   "id": "ebd39888",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e00870ad",
+   "id": "47599a28",
    "metadata": {},
    "source": [
     "### 174"
@@ -137,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "f7ae7dae",
+   "id": "807ff1ba",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac23e073",
+   "id": "e731ced0",
    "metadata": {},
    "source": [
     "### 175"
@@ -172,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "0fe595b6",
+   "id": "90b4608a",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb145b4a",
+   "id": "6f6ea853",
    "metadata": {},
    "source": [
     "### 176"
@@ -203,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "67e17f16",
+   "id": "3783cf3b",
    "metadata": {},
    "outputs": [
     {
@@ -224,9 +224,87 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fb2def24",
+   "metadata": {},
+   "source": [
+    "### 177"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "d839582e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "라 다\n",
+      "다 나\n",
+      "나 가\n",
+      "라 다\n",
+      "다 나\n",
+      "나 가\n",
+      "라 다\n",
+      "다 나\n",
+      "나 가\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_list = [\"가\", \"나\", \"다\", \"라\"]\n",
+    "\n",
+    "for i in range (0, 3) :\n",
+    "    print(my_list[-1-i], my_list[-2-i])\n",
+    "\n",
+    "# Other Soulutions\n",
+    "for i in range(len(my_list) - 1, 0, -1):\n",
+    "    print(my_list[i], my_list[i-1])\n",
+    "    \n",
+    "for i in range(len(my_list) - 1):\n",
+    "    print(my_list[len(my_list) - 1 - i], my_list[len(my_list) - 2 - i])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "423cc9bc",
+   "metadata": {},
+   "source": [
+    "### 178"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "8ccdfdf3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n",
+      "200\n",
+      "400\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_list = [100, 200, 400, 800]\n",
+    "\n",
+    "#for i in range (len(my_list) -1) :\n",
+    "#    print(my_list[len(my_list[i + 1]) - my_list[i]])\n",
+    "\n",
+    "for i in range(len(my_list) - 1):\n",
+    "    print(abs(my_list[i+1] - my_list[i]))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec5e77ff",
+   "id": "87d5e458",
    "metadata": {},
    "outputs": [],
    "source": []
