--- a/python_algorithm/pyPractice/p171to180.ipynb
+++ b/python_algorithm/pyPractice/p171to180.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ef98c150",
+   "id": "52e03108",
    "metadata": {},
    "source": [
     "### 171"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "de083b0b",
+   "id": "2c36299e",
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d72885e",
+   "id": "16c15348",
    "metadata": {},
    "source": [
     "### 172"
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e44130ec",
+   "id": "518892b7",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5629a4e",
+   "id": "dd2e5543",
    "metadata": {},
    "source": [
     "### 173"
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "ebd39888",
+   "id": "145805ba",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47599a28",
+   "id": "a6d447bc",
    "metadata": {},
    "source": [
     "### 174"
@@ -137,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "807ff1ba",
+   "id": "eb210b32",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e731ced0",
+   "id": "7d92864e",
    "metadata": {},
    "source": [
     "### 175"
@@ -172,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "90b4608a",
+   "id": "dd14f74d",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f6ea853",
+   "id": "1071d534",
    "metadata": {},
    "source": [
     "### 176"
@@ -203,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "3783cf3b",
+   "id": "4b012e68",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb2def24",
+   "id": "f74aea26",
    "metadata": {},
    "source": [
     "### 177"
@@ -234,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "d839582e",
+   "id": "ac5e220b",
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "423cc9bc",
+   "id": "6aeab77b",
    "metadata": {},
    "source": [
     "### 178"
@@ -277,17 +277,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "8ccdfdf3",
+   "execution_count": 33,
+   "id": "0491ebe6",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "100\n",
-      "200\n",
-      "400\n"
+     "ename": "TypeError",
+     "evalue": "object of type 'int' has no len()",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-33-25845a29e407>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmy_list\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmy_list\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmy_list\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mmy_list\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmy_list\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m-\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: object of type 'int' has no len()"
      ]
     }
    ],
@@ -295,16 +297,62 @@
     "my_list = [100, 200, 400, 800]\n",
     "\n",
     "#for i in range (len(my_list) -1) :\n",
-    "#    print(my_list[len(my_list[i + 1]) - my_list[i]])\n",
+    "#    print(my_list[len(my_list[i + 1])] - my_list[i])\n",
     "\n",
     "for i in range(len(my_list) - 1):\n",
-    "    print(abs(my_list[i+1] - my_list[i]))"
+    "    print(abs(my_list[i+1] - my_list[i])) # print 문법상 -를 그냥 쓸수없어서 abs를 쓴 것 같음."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "abba829c",
+   "metadata": {},
+   "source": [
+    "### 179\n",
+    "리스트에는 6일 간의 종가 데이터가 저장되어 있다. 종가 데이터의 3일 이동 평균을 계산하고 이를 화면에 출력하라.\n",
+    "\n",
+    "> my_list = [100, 200, 400, 800, 1000, 1300]\n",
+    "\n",
+    "첫 번째 줄에는 100, 200, 400의 평균값이 출력된다. 두 번째 줄에는 200, 400, 800의 평균값이 출력된다. 같은 방식으로 나머지 데이터의 평균을 출력한다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "a06af230",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "233.33333333333334\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_list = [100, 200, 400, 800, 1000, 1300]\n",
+    "\n",
+    "for i in range"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27f027e5",
+   "metadata": {},
+   "source": [
+    "### 180\n",
+    "리스트에 5일간의 저가, 고가 정보가 저장돼 있다. 고가와 저가의 차를 변동폭이라고 정의할 때, low, high 두 개의 리스트를 사용해서 5일간의 변동폭을 volatility 리스트에 저장하라.\n",
+    "\n",
+    ">low_prices  = [100, 200, 400, 800, 1000]\n",
+    "\n",
+    ">high_prices = [150, 300, 430, 880, 1000]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87d5e458",
+   "id": "95a87f2c",
    "metadata": {},
    "outputs": [],
    "source": []
