--- a/python_algorithm/pyPractice/p171to180.ipynb
+++ b/python_algorithm/pyPractice/p171to180.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "52e03108",
+   "id": "73be2e54",
    "metadata": {},
    "source": [
     "### 171"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2c36299e",
+   "id": "15a224d7",
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16c15348",
+   "id": "95232f44",
    "metadata": {},
    "source": [
     "### 172"
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "518892b7",
+   "id": "8133582e",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd2e5543",
+   "id": "a9ab71ee",
    "metadata": {},
    "source": [
     "### 173"
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "145805ba",
+   "id": "f57e507d",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6d447bc",
+   "id": "e1faef4b",
    "metadata": {},
    "source": [
     "### 174"
@@ -137,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "eb210b32",
+   "id": "37dbc0de",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d92864e",
+   "id": "6d8405d8",
    "metadata": {},
    "source": [
     "### 175"
@@ -172,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "dd14f74d",
+   "id": "0375df03",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1071d534",
+   "id": "bf5b2497",
    "metadata": {},
    "source": [
     "### 176"
@@ -203,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "4b012e68",
+   "id": "8b9d2289",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f74aea26",
+   "id": "79da1436",
    "metadata": {},
    "source": [
     "### 177"
@@ -234,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "ac5e220b",
+   "id": "8035e63f",
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6aeab77b",
+   "id": "bca92230",
    "metadata": {},
    "source": [
     "### 178"
@@ -277,19 +277,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "0491ebe6",
+   "execution_count": 35,
+   "id": "47684cff",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "object of type 'int' has no len()",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-33-25845a29e407>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmy_list\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmy_list\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmy_list\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mmy_list\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmy_list\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m-\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: object of type 'int' has no len()"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n",
+      "200\n",
+      "400\n"
      ]
     }
    ],
@@ -305,7 +303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abba829c",
+   "id": "71def157",
    "metadata": {},
    "source": [
     "### 179\n",
@@ -318,27 +316,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "a06af230",
+   "execution_count": 85,
+   "id": "7db7da73",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "233.33333333333334\n"
+      "233.33333333333334\n",
+      "466.6666666666667\n",
+      "733.3333333333334\n",
+      "1033.3333333333333\n",
+      "\n",
+      "233.33333333333334\n",
+      "466.6666666666667\n",
+      "733.3333333333334\n",
+      "1033.3333333333333\n"
      ]
     }
    ],
    "source": [
     "my_list = [100, 200, 400, 800, 1000, 1300]\n",
     "\n",
-    "for i in range"
+    "average = 0\n",
+    "i = 0\n",
+    "for i in range(len(my_list) - 2):\n",
+    "    average = sum(my_list[i:i+3])/(len(my_list) - 3)\n",
+    "    print(average)\n",
+    "    \n",
+    "print('')\n",
+    "# Other Solution\n",
+    "for i in range(1, len(my_list) - 1):\n",
+    "    print(abs(my_list[i-1] + my_list[i] + my_list[i+1]) / 3)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "27f027e5",
+   "id": "c82d63fc",
    "metadata": {},
    "source": [
     "### 180\n",
@@ -352,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95a87f2c",
+   "id": "7a73f3d6",
    "metadata": {},
    "outputs": [],
    "source": []
