added: solved problem #180. Need to review.

--- a/python_algorithm/pyPractice/p171to180.ipynb
+++ b/python_algorithm/pyPractice/p171to180.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "73be2e54",
+   "id": "8bd46dda",
    "metadata": {},
    "source": [
     "### 171"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "15a224d7",
+   "id": "41231794",
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95232f44",
+   "id": "339fba7d",
    "metadata": {},
    "source": [
     "### 172"
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "8133582e",
+   "id": "b6baa92f",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9ab71ee",
+   "id": "ab22b0d2",
    "metadata": {},
    "source": [
     "### 173"
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "f57e507d",
+   "id": "f9b2a644",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1faef4b",
+   "id": "785989c4",
    "metadata": {},
    "source": [
     "### 174"
@@ -137,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "37dbc0de",
+   "id": "6236949f",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d8405d8",
+   "id": "a0b4fe6e",
    "metadata": {},
    "source": [
     "### 175"
@@ -172,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "0375df03",
+   "id": "eb46eb73",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf5b2497",
+   "id": "c7c52a89",
    "metadata": {},
    "source": [
     "### 176"
@@ -203,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "8b9d2289",
+   "id": "2b14ec9c",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79da1436",
+   "id": "3649ef1e",
    "metadata": {},
    "source": [
     "### 177"
@@ -234,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "8035e63f",
+   "id": "04341699",
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bca92230",
+   "id": "47874efe",
    "metadata": {},
    "source": [
     "### 178"
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "47684cff",
+   "id": "5aa2e6b5",
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71def157",
+   "id": "5498f38c",
    "metadata": {},
    "source": [
     "### 179\n",
@@ -317,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "7db7da73",
+   "id": "4ea2ab38",
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c82d63fc",
+   "id": "f6407c2a",
    "metadata": {},
    "source": [
     "### 180\n",
@@ -366,11 +366,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7a73f3d6",
+   "execution_count": 94,
+   "id": "fc9b3983",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[50]\n",
+      "[50, 100]\n",
+      "[50, 100, 30]\n",
+      "[50, 100, 30, 80]\n",
+      "[50, 100, 30, 80, 0]\n",
+      "[50, 100, 30, 80, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "low_prices = [100, 200, 400, 800, 1000]\n",
+    "high_prices = [150, 300, 430, 880, 1000]\n",
+    "\n",
+    "volatility = [] # Array로 초기화를 안하고 append를 못써서 못풀었음.\n",
+    "for i in range(len(low_prices)) :\n",
+    "    volatility.append(high_prices[i] - low_prices[i])\n",
+    "    print(volatility)\n",
+    "    \n",
+    "print(volatility)"
+   ]
   }
  ],
  "metadata": {
