added : solved problem from 186 to 187.

--- a/python_algorithm/pyPractice/p181to190.ipynb
+++ b/python_algorithm/pyPractice/p181to190.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b9bf6dce",
+   "id": "b4600ccb",
    "metadata": {},
    "source": [
     "### 181"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c0413ea0",
+   "id": "4ebdeb60",
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51b3dd33",
+   "id": "5cbb985e",
    "metadata": {},
    "source": [
     "### 182"
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "bd59776e",
+   "id": "b59dd0cb",
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d570acc8",
+   "id": "53cfbbc1",
    "metadata": {},
    "source": [
     "### 183"
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "cc08e48d",
+   "id": "601201a2",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6cc6af50",
+   "id": "f057d0a8",
    "metadata": {},
    "source": [
     "### 184"
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "71e0aa05",
+   "id": "ced04405",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d8228c1",
+   "id": "d2265990",
    "metadata": {},
    "source": [
     "### 185"
@@ -118,8 +118,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "450d2e6a",
+   "execution_count": 11,
+   "id": "0d1af6e1",
    "metadata": {},
    "outputs": [
     {
@@ -151,6 +151,102 @@
     "    for col in row :\n",
     "        print (col, \"호\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e6ed995",
+   "metadata": {},
+   "source": [
+    "### 186"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "5db20635",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[301, 302]\n",
+      "[201, 202]\n",
+      "[101, 102]\n",
+      "\n",
+      "301 호\n",
+      "302 호\n",
+      "201 호\n",
+      "202 호\n",
+      "101 호\n",
+      "102 호\n"
+     ]
+    }
+   ],
+   "source": [
+    "home = [ [101, 102], [201, 202], [301, 302] ]\n",
+    "\n",
+    "for row in home[::-1]:\n",
+    "    print(row)\n",
+    "    \n",
+    "print(\"\")\n",
+    "\n",
+    "for row in home[::-1]:\n",
+    "    for col in row:\n",
+    "        print(col, \"호\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1201ca90",
+   "metadata": {},
+   "source": [
+    "### 187"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "46b7bfff",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[302, 301]\n",
+      "[202, 201]\n",
+      "[102, 101]\n",
+      "\n",
+      "302 호\n",
+      "301 호\n",
+      "202 호\n",
+      "201 호\n",
+      "102 호\n",
+      "101 호\n"
+     ]
+    }
+   ],
+   "source": [
+    "home = [ [101, 102], [201, 202], [301, 302] ]\n",
+    "\n",
+    "for row in home[::-1]:\n",
+    "    print(row[::-1])\n",
+    "    \n",
+    "print(\"\")\n",
+    "\n",
+    "for row in home[::-1]:\n",
+    "    for col in row[::-1]:\n",
+    "        print(col, \"호\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c8e603a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
