added: sovled problem from 189 to 190.

--- a/python_algorithm/pyPractice/p181to190.ipynb
+++ b/python_algorithm/pyPractice/p181to190.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b4600ccb",
+   "id": "d93cd95e",
    "metadata": {},
    "source": [
     "### 181"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4ebdeb60",
+   "id": "88aa41aa",
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5cbb985e",
+   "id": "f4019e7e",
    "metadata": {},
    "source": [
     "### 182"
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b59dd0cb",
+   "id": "170028ff",
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53cfbbc1",
+   "id": "ee1920b3",
    "metadata": {},
    "source": [
     "### 183"
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "601201a2",
+   "id": "e99d87e2",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f057d0a8",
+   "id": "242d38d5",
    "metadata": {},
    "source": [
     "### 184"
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ced04405",
+   "id": "747d4572",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2265990",
+   "id": "2dfa4974",
    "metadata": {},
    "source": [
     "### 185"
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "0d1af6e1",
+   "id": "c51a4ea5",
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e6ed995",
+   "id": "9f3730e4",
    "metadata": {},
    "source": [
     "### 186"
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "5db20635",
+   "id": "b5fdf458",
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1201ca90",
+   "id": "e9bb3dbb",
    "metadata": {},
    "source": [
     "### 187"
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "46b7bfff",
+   "id": "4f4ace56",
    "metadata": {},
    "outputs": [
     {
@@ -241,12 +241,122 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8c8e603a",
+   "cell_type": "markdown",
+   "id": "c48d41d7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 188"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "27371252",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "101 호\n",
+      "-----\n",
+      "102 호\n",
+      "-----\n",
+      "201 호\n",
+      "-----\n",
+      "202 호\n",
+      "-----\n",
+      "301 호\n",
+      "-----\n",
+      "302 호\n",
+      "-----\n"
+     ]
+    }
+   ],
+   "source": [
+    "home = [ [101, 102], [201, 202], [301, 302] ]\n",
+    "\n",
+    "for row in home :\n",
+    "    for col in row :\n",
+    "        print(col, \"호\")\n",
+    "        print(\"-----\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a577e183",
+   "metadata": {},
+   "source": [
+    "### 189"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "7e786e12",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "101 호\n",
+      "102 호\n",
+      "-----\n",
+      "201 호\n",
+      "202 호\n",
+      "-----\n",
+      "301 호\n",
+      "302 호\n",
+      "-----\n"
+     ]
+    }
+   ],
+   "source": [
+    "home = [ [101, 102], [201, 202], [301, 302] ]\n",
+    "\n",
+    "for row in home :\n",
+    "    for col in row :\n",
+    "        print(col, \"호\")\n",
+    "    print(\"-----\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e0d964e0",
+   "metadata": {},
+   "source": [
+    "### 190"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "628b5f85",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "101 호\n",
+      "102 호\n",
+      "201 호\n",
+      "202 호\n",
+      "301 호\n",
+      "302 호\n",
+      "-----\n"
+     ]
+    }
+   ],
+   "source": [
+    "home = [ [101, 102], [201, 202], [301, 302] ]\n",
+    "\n",
+    "for row in home :\n",
+    "    for col in row :\n",
+    "        print(col, \"호\")\n",
+    "print(\"-----\")"
+   ]
   }
  ],
  "metadata": {
