added: solved problem from 192 to 193.

--- a/python_algorithm/pyPractice/p191to200.ipynb
+++ b/python_algorithm/pyPractice/p191to200.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7110de04",
+   "id": "166a9493",
    "metadata": {},
    "source": [
     "### 191\n",
@@ -20,8 +20,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "7c487f2b",
+   "execution_count": 1,
+   "id": "c1cecb38",
    "metadata": {},
    "outputs": [
     {
@@ -53,6 +53,91 @@
     "for row in data :\n",
     "    for col in row :\n",
     "        print(col * 1.00014)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d9f1fc96",
+   "metadata": {},
+   "source": [
+    "### 192"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "d3af9a25",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2000.28\n",
+      "3050.427\n",
+      "2050.2870000000003\n",
+      "1980.2772\n",
+      "---\n",
+      "7501.05\n",
+      "2050.2870000000003\n",
+      "2050.2870000000003\n",
+      "1980.2772\n",
+      "---\n",
+      "15452.163\n",
+      "15052.107\n",
+      "15552.177\n",
+      "14902.086000000001\n",
+      "---\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = [\n",
+    "    [ 2000,  3050,  2050,  1980],\n",
+    "    [ 7500,  2050,  2050,  1980],\n",
+    "    [15450, 15050, 15550, 14900]\n",
+    "]\n",
+    "\n",
+    "for row in data :\n",
+    "    for col in row :\n",
+    "        print(col*1.00014)\n",
+    "    print(\"---\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b53ab39",
+   "metadata": {},
+   "source": [
+    "### 193"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "b9333cc4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2000.28, 3050.427, 2050.2870000000003, 1980.2772, 7501.05, 2050.2870000000003, 2050.2870000000003, 1980.2772, 15452.163, 15052.107, 15552.177, 14902.086000000001]\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = [\n",
+    "    [ 2000,  3050,  2050,  1980],\n",
+    "    [ 7500,  2050,  2050,  1980],\n",
+    "    [15450, 15050, 15550, 14900]\n",
+    "]\n",
+    "\n",
+    "result = []\n",
+    "for row in data :\n",
+    "    for col in row :\n",
+    "        result.append(col * 1.00014)\n",
+    "print(result)"
    ]
   }
  ],
