--- a/python_algorithm/pyPractice/p191to200.ipynb
+++ b/python_algorithm/pyPractice/p191to200.ipynb
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "b9333cc4",
    "metadata": {},
    "outputs": [
@@ -138,6 +138,44 @@
     "    for col in row :\n",
     "        result.append(col * 1.00014)\n",
     "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c99382f",
+   "metadata": {},
+   "source": [
+    "### 194"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "394c7efc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2000.28, 3050.427, 2050.2870000000003, 1980.2772], [7501.05, 2050.2870000000003, 2050.2870000000003, 1980.2772], [15452.163, 15052.107, 15552.177, 14902.086000000001]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = [\n",
+    "    [ 2000,  3050,  2050,  1980],\n",
+    "    [ 7500,  2050,  2050,  1980],\n",
+    "    [15450, 15050, 15550, 14900]\n",
+    "]\n",
+    "\n",
+    "result = []\n",
+    "for row in data :\n",
+    "    sub = []\n",
+    "    for col in row :\n",
+    "        sub.append(col * 1.00014)\n",
+    "    result.append(sub)\n",
+    "print (result)"
    ]
   }
  ],
