added: solved problem from 195 to 196.

--- a/python_algorithm/pyPractice/p191to200.ipynb
+++ b/python_algorithm/pyPractice/p191to200.ipynb
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c99382f",
+   "id": "31f4f128",
    "metadata": {},
    "source": [
     "### 194"
@@ -150,8 +150,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "394c7efc",
+   "execution_count": 9,
+   "id": "46865516",
    "metadata": {},
    "outputs": [
     {
@@ -176,6 +176,78 @@
     "        sub.append(col * 1.00014)\n",
     "    result.append(sub)\n",
     "print (result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf577e61",
+   "metadata": {},
+   "source": [
+    "### 195"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "5aecd41c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n",
+      "[100, 110, 70, 100]\n",
+      "190\n",
+      "[200, 210, 180, 190]\n",
+      "310\n",
+      "[300, 310, 300, 310]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ohlc = [[\"open\", \"high\", \"low\", \"close\"],\n",
+    "        [100, 110, 70, 100],\n",
+    "        [200, 210, 180, 190],\n",
+    "        [300, 310, 300, 310]]\n",
+    "\n",
+    "for row in ohlc[1:] :\n",
+    "    print(row[3])\n",
+    "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c85a14b",
+   "metadata": {},
+   "source": [
+    "### 196"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "dea217a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "190\n",
+      "310\n"
+     ]
+    }
+   ],
+   "source": [
+    "ohlc = [[\"open\", \"high\", \"low\", \"close\"],\n",
+    "        [100, 110, 70, 100],\n",
+    "        [200, 210, 180, 190],\n",
+    "        [300, 310, 300, 310]]\n",
+    "\n",
+    "for row in ohlc[1:] :\n",
+    "    if row[3] > 150 :\n",
+    "        print(row[3])"
    ]
   }
  ],
