--- a/python_algorithm/pyPractice/p191to200.ipynb
+++ b/python_algorithm/pyPractice/p191to200.ipynb
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31f4f128",
+   "id": "151a65ab",
    "metadata": {},
    "source": [
     "### 194"
@@ -151,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "46865516",
+   "id": "30994bda",
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf577e61",
+   "id": "f7061e0f",
    "metadata": {},
    "source": [
     "### 195"
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "5aecd41c",
+   "id": "0d10de90",
    "metadata": {},
    "outputs": [
     {
@@ -218,16 +218,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c85a14b",
+   "id": "bf3f3663",
    "metadata": {},
    "source": [
-    "### 196"
+    "### 196\n",
+    "\n",
+    "ohlc 리스트에는 시가(open), 고가 (high), 저가 (low) , 종가(close)가 날짜별로 저장돼 있다. 종가가 150원보다 큰경우에만 종가를 출력하라."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "dea217a8",
+   "execution_count": 14,
+   "id": "a0c7f1ed",
    "metadata": {},
    "outputs": [
     {
@@ -249,6 +251,86 @@
     "    if row[3] > 150 :\n",
     "        print(row[3])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f3755958",
+   "metadata": {},
+   "source": [
+    "### 197\n",
+    "\n",
+    "ohlc 리스트에는 시가(open), 고가 (high), 저가 (low) , 종가(close)가 날짜별로 저장돼 있다. 종가가 시가 보다 크거나 같은 경우에만 종가를 출력하라."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "25fbc9ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n",
+      "310\n"
+     ]
+    }
+   ],
+   "source": [
+    "ohlc = [[\"open\", \"high\", \"low\", \"close\"],\n",
+    "        [100, 110, 70, 100],\n",
+    "        [200, 210, 180, 190],\n",
+    "        [300, 310, 300, 310]]\n",
+    "\n",
+    "for row in ohlc[1:] :\n",
+    "    if row[3] >= row[0] :\n",
+    "        print(row[3])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0b83e31c",
+   "metadata": {},
+   "source": [
+    "### 198\n",
+    "\n",
+    "ohlc 리스트에는 시가(open), 고가 (high), 저가 (low) , 종가(close)가 날짜별로 저장돼 있다. 고가와 저가의 차이를 변동폭으로 정의할 때 변동폭을 volatility 이름의 리스트에 저장하라."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "e2676a71",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[40, 30, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ohlc = [[\"open\", \"high\", \"low\", \"close\"],\n",
+    "        [100, 110, 70, 100],\n",
+    "        [200, 210, 180, 190],\n",
+    "        [300, 310, 300, 310]]\n",
+    "\n",
+    "volatility = []\n",
+    "for row in ohlc[1:] :\n",
+    "    volatility.append(row[1]-row[2])\n",
+    "print(volatility)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "da460b45",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
