added: solved problem from #199 to 200.

--- a/python_algorithm/pyPractice/p191to200.ipynb
+++ b/python_algorithm/pyPractice/p191to200.ipynb
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "151a65ab",
+   "id": "241462aa",
    "metadata": {},
    "source": [
     "### 194"
@@ -151,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "30994bda",
+   "id": "2b470864",
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7061e0f",
+   "id": "5cc034ab",
    "metadata": {},
    "source": [
     "### 195"
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "0d10de90",
+   "id": "70a88bd5",
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf3f3663",
+   "id": "be0da5fa",
    "metadata": {},
    "source": [
     "### 196\n",
@@ -229,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "a0c7f1ed",
+   "id": "f0e647ca",
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3755958",
+   "id": "d580e28f",
    "metadata": {},
    "source": [
     "### 197\n",
@@ -265,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "25fbc9ba",
+   "id": "1cadbeda",
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b83e31c",
+   "id": "4212c981",
    "metadata": {},
    "source": [
     "### 198\n",
@@ -301,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "e2676a71",
+   "id": "f1f344e7",
    "metadata": {},
    "outputs": [
     {
@@ -325,12 +325,73 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "da460b45",
+   "cell_type": "markdown",
+   "id": "89d7c531",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 199\n",
+    "리스트에는 3일 간의 ohlc 데이터가 저장돼 있다. 종가가 시가보다 높은 날의 변동성 (고가 - 저가)을 화면에 출력하라."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "7a13b3ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "ohlc = [[\"open\", \"high\", \"low\", \"close\"],\n",
+    "        [100, 110, 70, 100],\n",
+    "        [200, 210, 180, 190],\n",
+    "        [300, 310, 300, 310]]\n",
+    "\n",
+    "for row in ohlc[1:]:\n",
+    "    if row[3] > row[0] :\n",
+    "        print(row[1]-row[2])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "30bcf178",
+   "metadata": {},
+   "source": [
+    "### 200\n",
+    "리스트에는 3일 간의 ohlc 데이터가 저장돼 있다. 시가에 매수해서 종가에 매도 했을 경우 총 수익금을 계산하라."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "2cdf65a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "ohlc = [[\"open\", \"high\", \"low\", \"close\"],\n",
+    "        [100, 110, 70, 100],\n",
+    "        [200, 210, 180, 190],\n",
+    "        [300, 310, 300, 310]]\n",
+    "\n",
+    "profit = 0\n",
+    "for row in ohlc[1:] :\n",
+    "    profit += (row[3] - row[0])\n",
+    "print(profit)"
+   ]
   }
  ],
  "metadata": {
