added: updated the content.

--- a/python_algorithm/pyPractice/p201to210.ipynb
+++ b/python_algorithm/pyPractice/p201to210.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8c928f69",
+   "id": "0b17b19d",
    "metadata": {},
    "source": [
     "### 201 - 203"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0942536c",
+   "id": "40aaaae6",
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8378ec8",
+   "id": "012feb29",
    "metadata": {},
    "source": [
     "### 204"
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "22dcabf0",
+   "id": "eed273b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,9 +156,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4f381508",
+   "metadata": {},
+   "source": [
+    "### 206 - 210 \n",
+    "\n",
+    "Predicting the result based on the written code. Nothing to solve."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fdfd0d8d",
+   "id": "03077b11",
    "metadata": {},
    "outputs": [],
    "source": []
