added: solved problem from 224 to 225.

--- a/python_algorithm/pyPractice/p221to230.ipynb
+++ b/python_algorithm/pyPractice/p221to230.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "17bf50c4",
+   "id": "3217b40f",
    "metadata": {},
    "outputs": [
     {
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "57ac1068",
+   "id": "4674b3ce",
    "metadata": {},
    "outputs": [
     {
@@ -48,8 +48,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "d611f9a7",
+   "execution_count": 12,
+   "id": "ab5b0ff8",
    "metadata": {},
    "outputs": [
     {
@@ -73,6 +73,56 @@
     "            print(v)\n",
     "        \n",
     "print_even([1,2,3,4,5,6,7,8,9,10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "ace88949",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "이름\n",
+      "나이\n",
+      "성별\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 224\n",
+    "\n",
+    "def print_keys (dic) :\n",
+    "    for keys in dic.keys() :\n",
+    "        print(keys)\n",
+    "print_keys({\"이름\":\"김말똥\", \"나이\":30, \"성별\":0})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "93debb44",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[100, 130, 100, 100]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 225\n",
+    "\n",
+    "my_ohlc = {\"10/26\" : [100, 130, 100, 100],\n",
+    "           \"10/27\" : [10, 12, 10, 11]}\n",
+    "def print_value_by_keys (my_ohlc, keys) :\n",
+    "    print(my_ohlc[keys])\n",
+    "\n",
+    "print_value_by_keys(my_ohlc, \"10/26\")"
    ]
   }
  ],
