--- a/python_algorithm/pyPractice/p221to230.ipynb
+++ b/python_algorithm/pyPractice/p221to230.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3217b40f",
+   "id": "85f9b041",
    "metadata": {},
    "outputs": [
     {
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4674b3ce",
+   "id": "5e1018bc",
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "ab5b0ff8",
+   "id": "42cf7d61",
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "ace88949",
+   "id": "ba77502d",
    "metadata": {},
    "outputs": [
     {
@@ -102,8 +102,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "93debb44",
+   "execution_count": 22,
+   "id": "f1b88133",
    "metadata": {},
    "outputs": [
     {
@@ -124,6 +124,51 @@
     "\n",
     "print_value_by_keys(my_ohlc, \"10/26\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "8b93f21d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "abcde\n",
+      "fghij\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 226\n",
+    "\n",
+    "def print_split(string) :\n",
+    "    chopped = int(len(string) / 5)\n",
+    "    for x in range (chopped + 1) :\n",
+    "        print(string[x * 5 : x * 5 + 5])\n",
+    "        \n",
+    "print_split(\"abcdefghij\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "ee8a86be",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "아이엠어보\n",
+      "이유알어걸\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
